--- a/teacher/views/homepage.ejs
+++ b/teacher/views/homepage.ejs
@@ -197,8 +197,7 @@
               })
               .then((data) => {
                 alert("Announcement submitted successfully:", data);
-                document.getElementById("announcementTitle").value = "";
-                document.getElementById("announcementText").value = "";
+                location.reload();
               })
               .catch((error) => {
                 console.error("Error:", error);
@@ -268,6 +267,7 @@
         
         // Optionally, show a success message to the user
         alert('Announcement updated successfully!');
+        location.reload();
     })
     .catch(error => {
         // Handle errors
@@ -276,6 +276,40 @@
     });
 }
 
+      function deleteAnnouncement(announcementId){
+
+        const data = {
+        announcementId: announcementId
+    };
+
+        fetch(`/delete-announcement`, {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(data)
+    })
+    .then(response => {
+        if (!response.ok) {
+            throw new Error('Network response was not ok');
+        }
+        return response.json();
+    })
+    .then(data => {
+        // Handle success
+        console.log('Success:', data);
+
+        // Optionally, show a success message to the user
+        alert('Announcement deleted successfully!');
+        location.reload();
+    })
+    .catch(error => {
+        // Handle errors
+        console.error('Error:', error);
+        alert('Error updating announcement. Please try again.');
+        location.reload();
+    });
+}
       console.log("fullName:", "<%= fullName %>");
     </script>
   </body>
