Manage students shows requirements list and reports to be reviewed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -689,6 +689,10 @@ a:hover {
    background-color: darken(var(--main-color), 10%);
  }
 
+ .highlighted {
+   background-color: rgba(240, 240, 240, 0.3);
+}
+
 /* Form */
 
 .manage-grid {
