--- a/teacher/views/company-details.ejs
+++ b/teacher/views/company-details.ejs
@@ -54,11 +54,13 @@
 </div>
 
 <section class="home-grid">
-   <h1 class="heading">Dashboard</h1>
+   <h1 class="heading">Company Details</h1>
    <div class="box-container">
       
       <div class="adminbox">
          <h3 class="title">Companies</h3>
+         <hr class="hrule">
+         <br>
          <table>
             <tr>
                <th>Name</th>
