--- a/teacher/views/homepage.ejs
+++ b/teacher/views/homepage.ejs
@@ -81,6 +81,9 @@
       <div class="box-container">
         <div class="adminbox">
           <h3 class="title">Student Contact List</h3>
+          <hr class="hrule">
+          <br>
+        
           <table>
             <tr>
               <th>Student ID</th>
@@ -99,6 +102,7 @@
 
         <div class="adminbox">
           <h3 class="title">Create Announcement</h3>
+          <hr class="hrule">
           <form id="announcementForm">
             <label for="announcementTitle">Title:</label>
             <input
@@ -122,6 +126,8 @@
           <br>
           <div class="adminbox">
   <h3 class="title">Announcements</h3>
+  <hr class="hrule">
+  <br>
   <table>
     <tr>
       <th>Title</th>
