--- a/teacher/views/manage-students.ejs
+++ b/teacher/views/manage-students.ejs
@@ -54,6 +54,7 @@
 </div>
 
 <section class="manage-grid">
+    <h1 class="heading">Manage Students</h1>
    <div class="manage-container">
        <div class="box">
            <h1 class="title">Student List</h1>
