--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,9 @@
 
 html{
    font-size: 62.5%;
-   overflow-x: hidden;
+   margin: 0;
+   padding: 0;
+   overflow: hidden;
 }
 
 html::-webkit-scrollbar{
@@ -45,7 +47,43 @@ html::-webkit-scrollbar-thumb{
 body{
    background-color: var(--light-bg);
    padding-left: 30rem;
+   margin: 0;
+   padding: 0;
+   overflow: hidden;
 }
+ 
+ .panorama {
+   position: fixed;
+    top: 0;
+    left: 0;
+    width: 1000%;
+    height: 100%;
+    background: url(../images/360-degree-panorama-rendering-services.jpg) center;
+    filter: blur(4px);
+    background-size: 15%;
+    animation: panoramaAnimation 1000s infinite linear;
+    z-index: -2;
+ }
+
+ .multiply{
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background: linear-gradient(rgb(69 222 255 / 50%), rgb(80 35 35 / 50%)), url(your-background-image.jpg);
+   background-blend-mode: multiply;
+   z-index: -1;
+ }
+ 
+ @keyframes panoramaAnimation {
+   from {
+     transform: translateX(0%);
+   }
+   to {
+     transform: translateX(-100%);
+   }
+ }
 
 body.dark{
    --light-color:#aaa;
@@ -346,7 +384,7 @@ section{
 }
 
 .home-grid .box-container .box .title{
-   font-size: 2rem;
+   font-size: 2.5rem;
    color: var(--black);
    text-transform: capitalize;
 }
@@ -369,7 +407,7 @@ section{
 }
 
 .home-grid .box-container .rectangle .title{
-   font-size: 2rem;
+   font-size: 2.5rem;
    color: var(--black);
    text-transform: capitalize;
 }
@@ -431,6 +469,13 @@ section{
    color:var(--black);
    font-size: xx-small;
    margin-bottom: 5px;
+}
+
+.hrule {
+   background-color: var(--black);
+   height: 1px;
+   opacity: 40%;
+   margin-top: 5px;
 }
 
 #message{
@@ -652,7 +697,7 @@ a:hover {
 
  .adminbox h3 {
    color: var(--black);
-   font-size: large;
+   font-size: 2.5em;
  }
 
  .adminbox form {
@@ -902,6 +947,14 @@ h5 {
 
 .playlist-videos .box-container .box:hover h3{
    color: var(--main-color);
+}
+
+.reqspan {
+   float: right;
+    width: 100px;
+    text-align: right;
+    margin-right: 150px;
+    color: red;
 }
 
 .watch-video .video-container{
@@ -1505,12 +1558,6 @@ h5 {
    border-color: var(--black);
    border-style: solid;
    border-width: 3px;
-}
-
-.current-password,
-.password-input,
-.confirm-password-input {
-   width: calc(50% - 60px);
 }
 
 .current-password-toggle,
