--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,15 +49,16 @@ body{
  
  .panorama {
    position: fixed;
-    top: 0;
-    left: 0;
-    width: 1000%;
-    height: 100%;
-    background: url(../images/360-degree-panorama-rendering-services.jpg) center;
-    filter: blur(4px);
-    background-size: 15%;
-    animation: panoramaAnimation 1000s infinite linear;
-    z-index: -2;
+  top: 0;
+  left: 0;
+  width: 1000%;
+  height: 100%;
+  background: url(../images/360-degree-panorama-rendering-services.jpg) center;
+    background-size: auto;
+  filter: blur(1.5px);
+  animation: panoramaAnimation 1200s infinite linear;
+  z-index: -2;
+  background-size: contain;
  }
 
  .multiply{
