--- a/teacher/views/profile.ejs
+++ b/teacher/views/profile.ejs
@@ -66,7 +66,7 @@
       </div>
    
 
-      <form class="profile-form" action="/change-password" method="post">
+      <form class="profile-form" action="/change-password" method="post" onsubmit="changePassword(event)">
       <label class="profile-field">
          <span>First Name:</span><input name="firstName" type="text" value=<%= firstName %> disabled> 
       </label>
@@ -81,18 +81,18 @@
       </label>
       <label class="profile-field">
       <span>Current Password:</span>
-         <input class="current-password" name="currentPassword" type="password" value=<%= password %> required maxlength="20">
-         <i class="fa fa-eye current-password-toggle" onclick="toggleCurrentPasswordVisibility()"></i>
+         <input class="current-password" name="currentPassword" type="password" placeholder="Enter Current Password" required maxlength="20">
+         <i class="fa fa-eye-slash current-password-toggle" onclick="toggleCurrentPasswordVisibility()"></i>
       </label>
       <label class="profile-field">
       <span>New Password:</span>
          <input class="password-input" name="password" type="password" placeholder="Your password" required maxlength="20">
-         <i class="fa fa-eye password-toggle" onclick="togglePasswordVisibility()"></i>
+         <i class="fa fa-eye-slash password-toggle" onclick="togglePasswordVisibility()"></i>
       </label>
       <label class="profile-field">
          <span>Confirm Password:</span>
          <input class="confirm-password-input" name="confirmPassword" type="password" required maxlength="20" placeholder="Confirm password">
-         <i class="fa fa-eye confirm-password-toggle" onclick="toggleConfirmPasswordVisibility()"></i>
+         <i class="fa fa-eye-slash confirm-password-toggle" onclick="toggleConfirmPasswordVisibility()"></i>
       </label>
          <input class="change-password-btn" type="submit" value="Change Password" name="submit">
       </form>
@@ -111,43 +111,43 @@
    var currentPassword = document.querySelector(".current-password");
    var toggle = document.querySelector(".current-password-toggle");
    
-      if (currentPassword.type === "password") {
-         currentPassword.type = "text";
-         toggle.classList.add('fa-eye-slash');
-         toggle.classList.remove('fa-eye');
-      } else {
-         currentPassword.type = "password";
-         toggle.classList.remove('fa-eye-slash');
-         toggle.classList.add('fa-eye');
-      }
-   }
+   if (currentPassword.type === "password") {
+    currentPassword.type = "text";
+    toggle.classList.remove('fa-eye-slash');
+    toggle.classList.add('fa-eye');
+  } else {
+    currentPassword.type = "password";
+    toggle.classList.add('fa-eye-slash');
+    toggle.classList.remove('fa-eye');
+  }
+}
 
-   function togglePasswordVisibility() {
-      var password = document.querySelector(".password-input");
-      var toggle = document.querySelector(".password-toggle");
-      if (password.type === "password") {
-         password.type = "text";
-         toggle.classList.add('fa-eye-slash');
-         toggle.classList.remove('fa-eye');
-      } else {
-         password.type = "password";
-         toggle.classList.remove('fa-eye-slash');
-         toggle.classList.add('fa-eye');
-      }
-   }
+function togglePasswordVisibility() {
+  var password = document.querySelector(".password-input");
+  var toggle = document.querySelector(".password-toggle");
+  if (password.type === "password") {
+    password.type = "text";
+    toggle.classList.remove('fa-eye-slash');
+    toggle.classList.add('fa-eye');
+  } else {
+    password.type = "password";
+    toggle.classList.add('fa-eye-slash');
+    toggle.classList.remove('fa-eye');
+  }
+}
 
-   function toggleConfirmPasswordVisibility() {
-      var confirmPassword = document.querySelector(".confirm-password-input");
-      var toggle = document.querySelector(".confirm-password-toggle");
-      if (confirmPassword.type === "password") {
-         confirmPassword.type = "text";
-         toggle.classList.add('fa-eye-slash');
-         toggle.classList.remove('fa-eye');
-      } else {
-         confirmPassword.type = "password";
-         toggle.classList.remove('fa-eye-slash');
-         toggle.classList.add('fa-eye');
-      }
+function toggleConfirmPasswordVisibility() {
+  var confirmPassword = document.querySelector(".confirm-password-input");
+  var toggle = document.querySelector(".confirm-password-toggle");
+  if (confirmPassword.type === "password") {
+    confirmPassword.type = "text";
+    toggle.classList.remove('fa-eye-slash');
+    toggle.classList.add('fa-eye');
+  } else {
+    confirmPassword.type = "password";
+    toggle.classList.add('fa-eye-slash');
+    toggle.classList.remove('fa-eye');
+  }
    }
 
    password.onchange = validatePassword;
@@ -160,6 +160,46 @@
       confirmPassword.setCustomValidity('');
    }
    }
+
+   function handlePasswordChangeResponse(response) {
+      console.log(response);
+            if (response.message) {
+               alert(response.message); 
+            } else {
+               alert(response.message); 
+               location.reload(); 
+            }
+         }
+
+         
+         function changePassword(event) {
+            event.preventDefault(); 
+            const currentPassword = document.querySelector(".current-password").value;
+            const newPassword = document.querySelector(".password-input").value;
+            const confirmPassword = document.querySelector(".confirm-password-input").value;
+            
+            fetch("/change-password", {
+               method: "POST",
+               headers: {
+                  "Content-Type": "application/json",
+               },
+               body: JSON.stringify({
+                  currentPassword: currentPassword,
+                  password: newPassword,
+                  confirmPassword: confirmPassword
+               }),
+            })
+            .then((response) => {
+               if (!response.ok) {
+                  throw new Error(`HTTP error! Status: ${response.status}`);
+               }
+               return response.json();
+            })
+            .then(handlePasswordChangeResponse)
+            .catch((error) => {
+               console.error("Error:", error);
+            });
+         }
 
 </script>
 
