--- a/teacher/views/manage-students.ejs
+++ b/teacher/views/manage-students.ejs
@@ -122,6 +122,7 @@
             <td>${student.company}</td>
         `;
         row.setAttribute("data-student-id", student.studentId); // Add a data attribute
+        row.setAttribute("class", "student-row");
         row.addEventListener("click", function() { selectRow(this); });
         tableBody.appendChild(row);
     });
